--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+tilingshell-gnome-shell-extension (17.3-2) verbeek; urgency=medium
+
+  * Replace dconf profile/database with GSettings override to avoid
+    file conflicts with other packages shipping /etc/dconf/profile/user.
+  * Drop dconf-cli dependency.
+  * Update per-user extension copy immediately on package upgrade.
+
+ -- BlankOn Linux <blankon-dev@googlegroups.com>  Wed, 18 Feb 2026 14:00:00 +0700
+
 tilingshell-gnome-shell-extension (17.3-1) verbeek; urgency=medium
 
   * Initial Debian packaging of Tiling Shell GNOME extension.
