--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tilingshell-gnome-shell-extension (17.5-1) verbeek; urgency=medium
+
+  * New upstream release 17.5.
+  * Disable show indicator by default.
+
+ -- BlankOn Linux <blankon-dev@googlegroups.com>  Fri, 20 Feb 2026 12:00:00 +0700
+
 tilingshell-gnome-shell-extension (17.3-2) verbeek; urgency=medium
 
   * Replace dconf profile/database with GSettings override to avoid
